cabal-version:       3.0
name:                cheops-logger
version:             0.0.1.0
synopsis:            Structured logger implementation.
description:

   The library implements of a very simple structured logging. This package provides
   a library that can be used in [co-log](https://hackage.haskell.org/package/co-log)
   ecosystem. It provides:

     * "Cheops.Logger.Structured" — API for adding structured context to the log messages
     * "Cheops.Logger.Internal.Writer" — efficient function for dumping logs in the 
       following format.

   @
   { "namespace":"server.package"
   , "severity": \"DEBUG\"
   , "thread":19
   , "message":"some long text "
   , "data":
      { "ip":"8.8.8.8"
      , "http.request_id":"b362cd5db5c193c05312af4d3a399955"
      , "http.method":\"DELETE\"
      , "http.path":"\/url\/"
      , "user_id":"123"
      } 
   }
   @
   
   == cheops-logger:instance

   In addition the package provides an @cheops-logger:instance@ library that
   can be used in the application as-is. The library is provides following
   functionality:

   * asynchronous background logging using [co-log-concurrent](https://hackage.haskell.org/package/co-log-concurrent);
   * configuration
   * optional metrics support

   == References

   Entry tutorial can be found on GitHub Readme page.
   
   Reference documentation can be found in "Cheops.Logger" module.

   Internal module describe details and design choices.

   == Notes

   The library allows to keep track and output additional user information ("data")
   with the messages. Implement fast and safe API for message output.

   However does not implement:

     * pretty-printing
     * timestamps
     * sending messages to remote services
     * message colouring

   All that functionality that be implemented by the external tools that the program
   pipes messages to.


license:             MPL-2.0
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@sirius.online
copyright:           (C) 2019-2020 Фонд "Талант и Успех"
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md

library metrics-prometheus
  default-language: Haskell2010
  visibility: public
  exposed-modules:
     Cheops.Logger.Internal.Metric.Prometheus
  reexported-modules:
     Cheops.Logger.Internal.Metric.Prometheus as Cheops.Logger.Metrics
  hs-source-dirs: src
  default-extensions:
    OverloadedStrings
  build-depends:
      base >= 4.11 && <5
    , prometheus-client ^>= 1.0
    , prometheus-client-extra ^>=0.1
    , text ^>=1.2

library metrics-noop
  visibility: public
  exposed-modules:
     Cheops.Logger.Internal.Metric.Noop
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >= 4.11 && <5
  

library instance
  visibility: public
  default-language: Haskell2010
  exposed-modules:
    Cheops.Logger
  default-extensions:
    ImportQualifiedPost
    RecordWildCards
    OverloadedStrings
  hs-source-dirs:
    logger
  signatures: Cheops.Logger.Metrics
  build-depends:
      base >= 4.11 && <5
    , aeson ^>= 1.5
    , co-log-core
    , cheops-logger
    , co-log-concurrent ^>=0.5
    , stm ^>=2.5
  ghc-options: -Wall -Werror

library
  exposed-modules:
    Cheops.Logger.Structured
    Cheops.Logger.Internal.Structured
    Cheops.Logger.Internal.Writer
  default-extensions:
    BlockArguments
    DerivingStrategies
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
  other-extensions:
    UnliftedFFITypes
    MagicHash
    FlexibleContexts
    LambdaCase
  build-depends:
      base >=4.11 && <5
    , aeson ^>= 1.5
    , bytestring ^>=0.10
    , text ^>=1.2
    , containers ^>=0.6
    , co-log-core ^>=0.2
    , string-conv ^>=0.1
  ghc-options: -Wall -Werror
  hs-source-dirs:      src
  default-language:    Haskell2010


executable Example
  hs-source-dirs: examples
  main-is: Main.hs
  build-depends:
    base >=4.11 && <5,
    cheops-logger:instance,
    cheops-logger:metrics-prometheus
  default-language: Haskell2010
