cabal-version:       3.0
name:                cheops-logger-example
version:             0.0.1.0
synopsis:            Structured logger implementation.
description:

  Example application that uses the logger.
  
  Example is currently unbuildable, see https://github.com/cheopslab/cheops-logger/issues/4

license:             MPL-2.0
author:              Alexander Vershilov
maintainer:          alexander.vershilov@sirius.online
copyright:           (C) 2019-2020 Фонд "Талант и Успех"
category:            System
build-type:          Simple

executable Main
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
      base >= 4.11 && <5
    , cheops-logger
    , cheops-logger:metrics-prometheus
  ghc-options: -Wall -Werror

